# cx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  VERSION_HISTORY.md  cx.sh
rust/cxrs/: Cargo.toml  Makefile  README.md
rust/cxrs/config/: line_length_allowlist.txt
rust/cxrs/scripts/: check_fn_name_length.py  check_integration_guardrails.sh  check_rs_max_lines.sh  check_rust_naming.py  check_test_naming.py  compat_check.sh  guardrails.sh  leak_scan.sh  parity_check.sh
rust/cxrs/src/: app.rs  capture.rs  cmdctx.rs  compat_cmd.rs  doctor.rs  error.rs  llm.rs  logs.rs  main.rs  paths.rs  policy.rs  quarantine.rs  runlog.rs  runtime.rs  runtime_controls.rs  schema.rs  schema_ops.rs  state.rs  task_cmds.rs  taskrun.rs  tasks.rs  types.rs  util.rs
rust/cxrs/src/app/: deps.rs  mod.rs  tests.rs
rust/cxrs/src/modules/: agentcmds.rs  analytics.rs  analytics_alert.rs  analytics_profile_metrics.rs  analytics_prompt_stats.rs  analytics_quota.rs  analytics_shared.rs  analytics_trace.rs  analytics_worklog.rs  help.rs  (+60 more)
rust/cxrs/tests/: adapter_telemetry_tests.rs  backend_benchmark_report_tests.rs  backend_benchmark_strict_tests.rs  backend_fairness_tests.rs  cli_edge_case_tests.rs  commands_integration.rs  entrypoint_integration.rs  llm_config.rs  optimize_contract_tests.rs  reliability_integration.rs  retry_timeout_tests.rs  scheduler_diagnostics_tests.rs  scheduler_tests.rs  schema_failure_tests.rs  task_lifecycle_tests.rs  telemetry_contract_tests.rs
rust/cxrs/tools/: quality_gate.py  release_check.py
(+58 files in other folders)
