[package]
name = "cxrs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
jsonschema = "0.18"
fs2 = "0.4"
wait-timeout = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
